# MiniDNN

./: .gitignore  CMakeLists.txt
include/: MiniDNN.h  Network.h
include/Output/: RelativeL2.h
tutorials/test_nrc/: test1.cpp
